Fix sizing issues on mobile

--- a/src/css/_landing.scss
+++ b/src/css/_landing.scss
@@ -35,7 +35,7 @@
     }
     div {
         color: $dark-accent;
-        font-size: 1.5em;
+        font-size: 1.3em;
         font-weight: bold;
         display: flex;
         justify-content: space-evenly;
